--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -10,11 +10,13 @@ jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - run: npm run build
-      - uses: FirebaseExtended/action-hosting-deploy@v0
-        with:
-          repoToken: ${{ secrets.GITHUB_TOKEN }}
-          firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_ARYAN_FITNESS_APP }}
-          channelId: live
-          projectId: aryan-fitness-app
+  - uses: actions/checkout@v4
+  - run: npm install
+  - run: npm run build
+  - uses: FirebaseExtended/action-hosting-deploy@v0
+    with:
+      repoToken: ${{ secrets.GITHUB_TOKEN }}
+      firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_ARYAN_FITNESS_APP }}
+      channelId: live
+      projectId: aryan-fitness-app
+
